// Copyright (c) 2024 Gitpod GmbH. All rights reserved.
// Licensed under the GNU Affero General Public License (AGPL).
// See License.AGPL.txt in the project root for license information.

syntax = "proto3";

package supervisor;

import "google/api/annotations.proto";

option go_package = "github.com/gitpod-io/gitpod/supervisor/api";
option java_package = "io.gitpod.supervisor.api";

service TaskService {
    // Gets the output of a given task
    rpc GetOutput(GetOutputRequest) returns (stream GetOutputResponse) {
        option (google.api.http) = {
            get: "/v1/terminal/get/{task_id}/output"
        };
    }
}

message GetOutputRequest {
    string task_id = 1;
}
message GetOutputResponse {
    bytes data = 1;
}
